--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cd server && npm install",
+    "build": "npx vite build && cd server && npm install",
     "start": "cd server && node index.js",
     "lint": "eslint .",
     "preview": "vite preview"
